--- a/checkout.html
+++ b/checkout.html
@@ -87,7 +87,7 @@
               </div>
               <div class="form-group">
                 <label for="">Alamat</label>
-                <textarea name="address" id="" cols="30" rows="5"></textarea>
+                <textarea class="form-control" name="address" id="" cols="30" rows="5"></textarea>
                 <small class="form-text text-danger">Alamat harus diisi</small>
               </div>
               <div class="form-group">
