--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
             </div>
           </div>
         </div>
+        <nav aria-label="Page Navigation Example">
+          <ul class="pagination">
+            <li class="page-item"><a href="#" class="page-link">Previous</a></li>
+            <li class="page-item"><a href="#" class="page-link">1</a></li>
+            <li class="page-item"><a href="#" class="page-link">2</a></li>
+            <li class="page-item"><a href="#" class="page-link">3</a></li>
+            <li class="page-item"><a href="#" class="page-link">Next</a></li>
+          </ul>
+        </nav>
       </div>
       <div class="col-md-3">
         <div class="row">
